<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9eae6"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".CalcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:background="@color/txt_background"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/creator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-thin"
            android:textStyle="italic"
            android:gravity="center|start"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Standard Calculator by: Mark S. (SnowGum)"
            android:textColor="@color/editText"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:background="@color/txt_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblOperations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/editText"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:background="@color/txt_background"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true"
            android:text="@string/results"
            android:textColor="@color/editText"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:background="@color/btn_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBckSpace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="backSpace"
            android:text="@string/btnBckSpace"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="clearEntry"
            android:text="@string/btnCE"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="clear"
            android:text="@string/btnC"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="getNegate"
            android:text="@string/btnPlusMinus"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnSqrRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="getSqrRoot"
            android:text="@string/btnSqrRoot"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:background="@color/btn_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="displayNum"
            android:tag="7"
            android:text="@string/btn7"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="displayNum"
            android:tag="8"
            android:text="@string/btn8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="displayNum"
            android:tag="9"
            android:text="@string/btn9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="getOperation"
            android:tag="÷"
            android:text="@string/btnDivision"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnSquare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="getSquare"
            android:text="@string/btnSquare"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:background="@color/btn_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="displayNum"
            android:tag="4"
            android:text="@string/btn4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="displayNum"
            android:tag="5"
            android:text="@string/btn5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="displayNum"
            android:tag="6"
            android:text="@string/btn6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="getOperation"
            android:tag="×"
            android:text="@string/btnMultiply"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnCube"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="getCube"
            android:text="@string/btnCube"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".24"
        android:background="@color/btn_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.80"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:background="@android:color/transparent"
                    android:onClick="displayNum"
                    android:tag="1"
                    android:text="@string/btn1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:background="@android:color/transparent"
                    android:onClick="displayNum"
                    android:tag="2"
                    android:text="@string/btn2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:background="@android:color/transparent"
                    android:onClick="displayNum"
                    android:tag="3"
                    android:text="@string/btn3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:background="@android:color/transparent"
                    android:onClick="getOperation"
                    android:tag="-"
                    android:text="@string/btnMinus"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:background="@android:color/transparent"
                    android:onClick="displayNum"
                    android:tag="0"
                    android:text="@string/btn0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:background="@android:color/transparent"
                    android:onClick="displayDot"
                    android:text="@string/btnDot"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/btnAddition"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:background="@android:color/transparent"
                    android:onClick="getOperation"
                    android:tag="+"
                    android:text="@string/btnAddition"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnResults"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:background="@android:color/transparent"
            android:onClick="getResults"
            android:text="@string/btnResults"
            android:textSize="25sp" />
    </LinearLayout>


</LinearLayout>

